@@ -204,8 +204,8 @@ public abstract class MaidOutfitItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelmaid_outfit(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmaid_outfit.LAYER_LOCATION)).LeftLeg, "right_leg",
-									new Modelmaid_outfit(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmaid_outfit.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modelmaid_outfit(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmaid_outfit.LAYER_LOCATION)).LeftBoot, "right_leg",
+									new Modelmaid_outfit(Minecraft.getInstance().getEntityModels().bakeLayer(Modelmaid_outfit.LAYER_LOCATION)).RightBoot, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
